--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 
 html, body{
     background-color: #aaa;
+    color: #ffffff;
     width: 100%;
     height: 100%;
     font-family: Ubuntu,sans-serif;
@@ -25,19 +26,26 @@ a:hover{
     display: grid;
 }
 
-.content{
+.ui {
+    position: absolute;
+    z-index: 1;
+    display: grid;
+    grid-template-columns: 17rem 10rem;
+}
+
+.hero{
     grid-column: 1;
     grid-row: 1;
     z-index: 10;
     display: grid;
     grid-template-columns: 10rem 7rem 1fr;
-    color: #ffffff;
     margin: 0;
     padding: 1rem;
-    background-color: #343434d5;
+    background-color: #343434a5;
+    height: 2.75rem;
 }
 
-.hero {
+.title {
     margin: 0rem 2rem 0rem 0rem;
 }
 
@@ -63,8 +71,65 @@ a:hover{
     }
 }
 
+.settings{
+    z-index: 1;
+    width: 15rem;
+    margin-top: 1rem;
+    padding: 1rem;
+    background-color: #343434a5;
+}
+
 #canvas{
     z-index: 0;
     position: absolute; 
     width: min(100vw, 100vh); 
+}
+
+.settings .header{
+    display: flex;
+    flex-direction: row;
+}
+
+#close{
+    margin: 1rem 0.8rem 0.8rem 7rem;
+    padding: 0.2rem 0.7rem 0.2rem 0.7rem;
+    font-size: 1.5rem;
+}
+
+#close:hover{
+    color: #f44;
+    cursor:pointer;
+}
+
+.settings .entry{
+    display: flex;
+    flex-direction: row;
+}
+
+.settings .entry .field-button {
+    margin: 0.8rem 0rem 0rem 1rem;
+}
+
+.settings .entry .number{
+    font-size: 1rem;
+    height: 1.2rem;
+    width: 4rem;
+}
+
+.settings .entry .update{
+    height: 1.5rem;
+    margin-left: 0.25rem;
+}
+
+.ui .open {
+    margin-top: 1rem;
+    padding: 1rem;
+    text-align: center;
+    background-color: #343434a5;
+    height: 1.25rem;
+}
+
+.ui .open:hover{
+    color: #f44;
+    cursor:pointer;
 }
