--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 html, body{
-    background-color: #aaa;
+    background-color: #222;
     color: #ffffff;
     width: 100%;
     height: 100%;
@@ -27,10 +27,11 @@ a:hover{
 }
 
 .ui {
+    margin-top: 5rem;
     position: absolute;
     z-index: 1;
     display: grid;
-    grid-template-columns: 17rem 10rem;
+    grid-template-columns: 17rem 7rem;
 }
 
 .hero{
@@ -73,9 +74,8 @@ a:hover{
 
 .settings{
     z-index: 1;
-    width: 15rem;
-    margin-top: 1rem;
-    padding: 1rem;
+    width: 17rem;
+    padding: 0rem 1rem 1rem 1rem;
     background-color: #343434a5;
 }
 
@@ -90,13 +90,13 @@ a:hover{
     flex-direction: row;
 }
 
-#close{
+#close-settings{
     margin: 1rem 0.8rem 0.8rem 7rem;
     padding: 0.2rem 0.7rem 0.2rem 0.7rem;
     font-size: 1.5rem;
 }
 
-#close:hover{
+#close-settings:hover{
     color: #f44;
     cursor:pointer;
 }
@@ -113,7 +113,7 @@ a:hover{
 .settings .entry .number{
     font-size: 1rem;
     height: 1.2rem;
-    width: 4rem;
+    width: 5rem;
 }
 
 .settings .entry .update{
@@ -122,14 +122,36 @@ a:hover{
 }
 
 .ui .open {
-    margin-top: 1rem;
-    padding: 1rem;
+    padding: 1rem 0rem 1rem 0rem;
     text-align: center;
     background-color: #343434a5;
     height: 1.25rem;
+    width: 9rem;
 }
 
 .ui .open:hover{
     color: #f44;
     cursor:pointer;
+}
+
+#open-settings{
+    padding: 1rem;
+}
+
+input {
+    border: none;
+    margin: 0.1rem;
+}
+
+button:hover {
+    cursor:pointer;
+}
+
+input:invalid{
+    background-color: rgb(255, 107, 107);
+}
+
+input:invalid + button.update {
+    pointer-events:none;
+    color: #bcbcbc;
 }
