--- a/css/style.css
+++ b/css/style.css
@@ -70,28 +70,27 @@ a:hover{
     }
 }
 
-.settings{
-    z-index: 1;
-    width: 17rem;
-    padding: 0rem 1rem 1rem 1rem;
-    background-color: #343434a5;
-    border-radius: 1rem;
-}
-
 #canvas{
     z-index: 0;
     position: absolute; 
     width: min(100vw, 100vh); 
 }
 
+.settings{
+    z-index: 1;
+    width: 20rem;
+    padding: 0rem 1rem 1rem 1rem;
+    background-color: #343434a5;
+    border-radius: 1rem;
+}
+
 .settings .header{
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 10fr 1fr;
 }
 
 #close-settings{
-    margin: 1rem 0.8rem 0.8rem 9rem;
-    padding: 0.2rem 0.7rem 0.2rem 0.7rem;
+    padding: 1.2rem 0.5rem 0rem 1rem;
     font-size: 1.5rem;
 }
 
